<resources>
    <string name="app_name">CampusView</string>
    <string name="profile">Scan QR Code</string>
    <string name="setting">Setting</string>

    <string name="openNavDrawer">Navigation Drawer open</string>
    <string name="closeNavDrawer">Navigation Drawer close</string>
    <string name="navigation">Navigation</string>
    <string name="ranking">Ranking</string>
    <string name="guidType">Type in your GUID</string>
    <string name="keyinGUID">Please key in your GUID</string>
    <string name="sit_campus_tour">SIT Campus Tour</string>
    <string name="guid_points">Position: Guid, Points</string>
    <string name="trivia_text">Scan the QR code located at the first floor of the building. It will lead you to the trivia</string>
    <string name="welcome_to_the_trivia_for">Welcome to the trivia for</string>
    <string name="quiz_header">This is the quiz for</string>
    <string name="congrats">Congratulations! You have earned</string>
    <string name="view_rankings">Click here to view rankings!</string>
    <string name="guidPath">guidProfile</string>
    <string name="questionPath">questionBank</string>
    <string name="triviaPath">trivia</string>
    <string name="home">Home</string>
    <string name="intro">Welcome to the SIT Campus Tour App. Look out for QR codes in the first level of each building, scan them and partake in the quiz against your friends! The top three students will stand a chance to win attractive prizes!</string>
    <string name="locate_where_you_are">Locate where you are!</string>
    <string name="novalue">No</string>
    <string name="yesvalue">Yes</string>
    <string name="dialog_message">Are you sure you want to exit and go to the main page?</string>
    <string name="title_value">Exit Prompt</string>
    <string name="service">NFC Service</string>
    <string name="aiddescription">Description</string>
    <string name="view_profile">View your profile</string>
    <string name="information">Information</string>

</resources>
